--- a/ng-auction/angular.json
+++ b/ng-auction/angular.json
@@ -130,5 +130,8 @@
       }
     }
   },
-  "defaultProject": "ng-auction"
+  "defaultProject": "ng-auction",
+  "cli": {
+    "analytics": false
+  }
 }
