--- a/ch11/ng-auction/package.json
+++ b/ch11/ng-auction/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint --color -c .eslintrc.js --ext .ts ./src/app",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -29,11 +29,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1101.1",
+    "@angular-eslint/eslint-plugin": "^1.1.0",
+    "@angular-eslint/eslint-plugin-template": "^1.1.0",
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "~11.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^31.2.2",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.3",
