--- a/ng-auction-spring/pom.xml
+++ b/ng-auction-spring/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.alsa</groupId>
-	<artifactId>firstdemo</artifactId>
+	<artifactId>ng-auction-spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>firstdemo</name>
 	<description>Demo project for Spring Boot</description>
